tests/fail/checkpoint_outlive_db.stderr
error[E0597]: `db` does not live long enough
  --> $DIR/checkpoint_outlive_db.rs:9:25
   |
7  |     let _checkpoint = {
   |         ----------- borrow later stored here
8  |         let db = DB::open_default("foo").unwrap();
9  |         Checkpoint::new(&db)
   |                         ^^^ borrowed value does not live long enough
10 |     };
   |     - `db` dropped here while still borrowed
